# Changelog
All wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [Unreleased]

## [12.43.0 ] - 2022-05-05
registerServiceMessage-Methode im QueueService korrigieren.

#299 Vorsilbe 'xpcor' für die Prozeduren des ServiceNotifierService ergänzen.

#302 Extensions aus Kunden-Projekten mit Group-Id 'com.minova' unterstützen.

## [12.42.0 ] - 2022-05-02
#281: Logs aus Tests in den target-Ordner schreiben, damit diese nicht ausversehen commited werden.

Automatisches Speichern, Queueing und Versenden von Nachrichten an andere Dienste implementieren.

## [12.41.2 - 12.41.3] - 2022-04-29

Kompatibilitäts-Projekt `aero.monova.core.application.system.app` erstellen,
um einen Setup-Fehler zu beheben zu können.

Siehe das link:doc/adoc/support.adoc[Support-Dokument] and link:app.legacy/README.adoc[Kompatibilitäts-Projekts-README] für Details.

## [12.41.1] - 2022-04-25
IsTablePresent-Methode public setzen.
Es werden Änderungen aus aero.minova.cas.service für die Implementierung benötigt, deshalb der Release.

## [12.41.0] - 2022-04-25

Experimentelle CAS-Erweiterung aero.minova.cas.servicenotifier an Änderungen anpassen.
Es werden Änderungen aus aero.minova.cas.service für die Implementierung benötigt, deshalb der Release.

## [12.40.4] - 2022-04-19

Experimentelle CAS-Erweiterung aero.minova.cas.servicenotifier für die Registrierung von Diensten erstellen.
Es werden Änderungen aus aero.minova.cas.service für die Implementierung benötigt, deshalb der Release.

## [12.40.3] - 2022-04-19

Inkompatiblen Änderungen: Umbenennen der Methode getTableForSecurityCheck nach unsecurelyGetIndexView in aero.minova.cas.service.

## [12.40.1] - 2022-04-08

Privilegienprüfung auf Prozeduren in PostgreSQL unterstützen.

## [12.40.0] - 2022-04-07

Ordner, Paket und Projekt-Namen vereinheitlichen:
